# mailing_project_cw

./: .env_sample  README.md  pyproject.toml
blog/: models.py  services.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
customer/: forms.py  models.py  services.py  urls.py  views.py
customer/migrations/: 0001_initial.py  0002_alter_customer_options.py
sender/: models.py
sending/: admin.py  cron.py  forms.py  models.py  urls.py  utils.py  views.py
sending/migrations/: 0001_initial.py  0002_alter_sending_start_sending_date_and_more.py  0003_rename_theme_message_subject_and_more.py  0004_alter_sending_start_sending_date_and_more.py  0005_alter_sending_start_sending_date_and_more.py  0006_alter_sending_start_sending_date_and_more.py  0007_alter_sending_start_sending_date_and_more.py  0008_alter_sending_start_sending_date_and_more.py  0009_rename_trysending_log_and_more.py  0010_remove_sending_updated_at_and_more.py  0011_alter_sending_start_sending_date_and_more.py  0012_alter_sending_start_sending_date_and_more.py  0013_alter_sending_start_sending_date_and_more.py  0014_alter_sending_start_sending_date_and_more.py  0015_alter_sending_start_sending_date_and_more.py  0016_alter_sending_start_sending_date_and_more.py  0017_alter_sending_start_sending_date_and_more.py  0018_alter_sending_start_sending_date_and_more.py  0019_alter_sending_start_sending_date_and_more.py  0020_alter_sending_start_sending_date_and_more.py  (+1 more)
users/: forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  (+4 more)
(+31 files in other folders)
